--- a/index.html
+++ b/index.html
@@ -1,32 +1,7 @@
 <html>
   <head>
     <title>Leprechaun</title>
-    <style type="text/css">
-        html, body {
-            color: black;
-            background-color: white;
-            font-family: sans-serif;
-        }
-
-        body {
-            width: 40em;
-            margin: 1em auto;
-        }
-
-        img {
-          border: 0;
-        }
-
-        #footer {
-            font-size: small;
-            border-top: 1px solid;
-        }
-
-        h1, h2, h3, dt {
-            color: green;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <h1>Leprechaun</h1>
