--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <div id="ribbon">
+      <a href="http://github.com/elemel/leprechaun"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub" /></a>
+    </div>
+
     <h1>Leprechaun</h1>
     <p>Leprechaun is a public-domain mud library for
     <a href="http://www.dworkin.nl/dgd/"><acronym title="Dworkin's Generic Driver">DGD</acronym></a>
