link to project page at GitHub

--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@
       equipment.</li>
       <li>Various utility libraries of reusable functions.</li>
     </ul>
+    <p>For more information, see the
+    <a href="http://github.com/elemel/leprechaun">project page</a> at
+    <a href="http://github.com/">GitHub</a>.</p>
   </body>
 </head>
